--- a/mason.yaml
+++ b/mason.yaml
@@ -1,11 +1,12 @@
 # Register bricks which can be consumed via the Mason CLI.
 # https://github.com/felangel/mason
 bricks:
-  # Sample Brick
-  # Run `mason make hello` to try it out.
-  hello: 0.1.0+1
   bloc:
     path: bloc
+  model:
+    path: model
+  screen:
+    path: screen
   # Bricks can also be imported via git url.
   # Uncomment the following lines to import
   # a brick from a remote git url.
