--- a/brick_oven.yaml
+++ b/brick_oven.yaml
@@ -1,109 +1,5 @@
 bricks:
-  bloc:
-    source: bloc/oven
-    dirs:
-      path:
-    files:
-      path/example_bloc.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _bloc
-        vars:
-          name: _NAME_
-          json: _JSON_
-      path/example_event.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _event
-        vars:
-          name: _NAME_
-      path/example_state.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _state
-        vars:
-          name: _NAME_
-          json: _JSON_
-  screen:
-    source: screen/oven
-    dirs:
-      path:
-      path/example:
-        name:
-          value: name
-          format: snake
-    files:
-      path/example/example_screen.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _screen
-        vars:
-          name: _NAME_
-      path/example/components/__description.dart:
-        vars:
-          name: _NAME_
-      path/example/example_view.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _view
-        vars:
-          name: _NAME_
-      path/example/example.dart:
-        name:
-          value: name
-          format: snake
-        vars:
-          name: _NAME_
-
-  model:
-    source: model/oven
-    dirs:
-      path:
-    files:
-      path/example.dart:
-        name:
-          value: name
-          format: snake
-        vars:
-          name: _NAME_
-          copyWith: _COPY_WITH_
-
-  repo:
-    source: repo/oven
-    dirs:
-      path:
-      path/example:
-        name:
-          value: name
-          format: snake
-    files:
-      path/example/example_cache.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _cache
-        vars:
-          name: _NAME_
-          byUser: _BY_USER_
-          model: _MODEL_
-      path/example/example_repos.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _repos
-        vars:
-          name: _NAME_
-          model: _MODEL_
-      path/example/example_source.dart:
-        name:
-          value: name
-          format: snake
-          suffix: _source
-        vars:
-          name: _NAME_
-          model: _MODEL_
+  bloc: bloc/brick_oven.yaml
+  screen: screen/brick_oven.yaml
+  model: model/brick_oven.yaml
+  repo: repo/brick_oven.yaml
