--- a/bloc/brick_oven.yaml
+++ b/bloc/brick_oven.yaml
@@ -1,29 +1,24 @@
 source: oven
 brick_config: brick.yaml
-dirs:
-  path:
-    name:
 files:
-  path/example_bloc.dart:
+  example_bloc.dart:
     name:
       value: name
       format: snake
       suffix: _bloc
     vars:
       name: _NAME_
-      json: _JSON_
-  path/example_event.dart:
+  example_event.dart:
     name:
       value: name
       format: snake
       suffix: _event
     vars:
       name: _NAME_
-  path/example_state.dart:
+  example_state.dart:
     name:
       value: name
       format: snake
       suffix: _state
     vars:
       name: _NAME_
-      json: _JSON_
