feat: create failure brick

--- a/brick_oven.yaml
+++ b/brick_oven.yaml
@@ -3,3 +3,4 @@ bricks:
   model: model/brick_oven.yaml
   repo: repo/brick_oven.yaml
   screen: screen/brick_oven.yaml
+  failure: failure/brick_oven.yaml
