feat: add watch all to firebase source and separate files for repos

--- a/repo/brick_oven.yaml
+++ b/repo/brick_oven.yaml
@@ -13,16 +13,6 @@ files:
       suffix: s_cache
     vars:
       name: _NAME_
-  name/repos.dart:
-    name:
-      value: name
-      format: snake
-      suffix: s_repos
-    vars:
-      name: _NAME_
-      is_firebase: _IS_FIREBASE_
-      is_dio: _IS_DIO_
-
   name/name.dart:
     name:
       format: snake
@@ -40,6 +30,14 @@ files:
       suffix: s_source
     vars:
       name: _NAME_
+  name/dio_repos.dart:
+    include_if: is_dio
+    name:
+      value: name
+      format: snake
+      suffix: s_repos
+    vars:
+      name: _NAME_
 
   # FIREBASE
   name/firebase_source.dart:
@@ -48,5 +46,13 @@ files:
       value: name
       format: snake
       suffix: s_source
+    vars:
+      name: _NAME_
+  name/firebase_repos.dart:
+    include_if: is_firebase
+    name:
+      value: name
+      format: snake
+      suffix: s_repos
     vars:
       name: _NAME_
