--- a/model/brick_oven.yaml
+++ b/model/brick_oven.yaml
@@ -15,6 +15,7 @@ files:
       value: name
       prefix: i_
       suffix: _source
+      format: snake
     vars:
       name: _NAME_
   firebase_source.dart:
@@ -23,5 +24,6 @@ files:
       value: name
       prefix: i_
       suffix: _source
+      format: snake
     vars:
       name: _NAME_
