--- a/model/brick.yaml
+++ b/model/brick.yaml
@@ -10,7 +10,6 @@ version: 0.1.0+1
 # It includes the version of mason that the brick requires.
 environment:
   mason: ">=0.1.0-dev <0.1.0"
-
 # Variables specify dynamic values that your brick depends on.
 # Zero or more variables can be specified for a given brick.
 # Each variable has:
@@ -18,9 +17,4 @@ environment:
 #  * an optional short description
 #  * an optional default value
 #  * an optional prompt phrase used when asking for the variable.
-vars:
-  name:
-    type: string
-    description: Model's name
-    default: Awesome
-    prompt: What is the name of the model?
+# vars:
