feat: create check for package to use package import

--- a/screen/brick_oven.yaml
+++ b/screen/brick_oven.yaml
@@ -13,6 +13,7 @@ files:
       suffix: _screen
     vars:
       name: _NAME_
+      project: _PROJECT_
   example/components/__description.dart:
     vars:
       name: _NAME_
