feat: add better prompts for interface and models

--- a/bloc/brick_oven.yaml
+++ b/bloc/brick_oven.yaml
@@ -6,86 +6,90 @@ files:
     include_if: is_basic
     name:
       braces: 2
-      value: name
+      value: singular
       format: snake
       suffix: _bloc
     vars:
-      name: _NAME_
+      singular: _SINGULAR_
   basic_event.dart:
     include_if: is_basic
     name:
       braces: 2
-      value: name
+      value: singular
       format: snake
       suffix: _event
     vars:
-      name: _NAME_
+      singular: _SINGULAR_
   basic_state.dart:
     include_if: is_basic
     name:
       braces: 2
-      value: name
+      value: singular
       format: snake
       suffix: _state
     vars:
-      name: _NAME_
+      singular: _SINGULAR_
 
   # SINGULAR
   singular_bloc.dart:
     include_if: is_singular
     name:
       braces: 2
-      value: name
+      value: singular
       format: snake
       suffix: _bloc
     vars:
-      name: _NAME_
+      interface: _INTERFACE_
+      singular: _SINGULAR_
       project: _PROJECT_
   singular_event.dart:
     include_if: is_singular
     name:
       braces: 2
-      value: name
+      value: singular
       format: snake
       suffix: _event
     vars:
-      name: _NAME_
+      singular: _SINGULAR_
   singular_state.dart:
     include_if: is_singular
     name:
       braces: 2
-      value: name
+      value: singular
       format: snake
       suffix: _state
     vars:
-      name: _NAME_
+      singular: _SINGULAR_
 
   # PLURAL
   plural_bloc.dart:
     include_if: is_plural
     name:
       braces: 2
-      value: name
+      value: plural
       format: snake
-      suffix: s_bloc
+      suffix: _bloc
     vars:
-      name: _NAME_
+      interface: _INTERFACE_
+      singular: _SINGULAR_
+      plural: _PLURAL_
       project: _PROJECT_
   plural_event.dart:
     include_if: is_plural
     name:
       braces: 2
-      value: name
+      value: plural
       format: snake
-      suffix: s_event
+      suffix: _event
     vars:
-      name: _NAME_
+      plural: _PLURAL_
   plural_state.dart:
     include_if: is_plural
     name:
       braces: 2
-      value: name
+      value: plural
       format: snake
-      suffix: s_state
+      suffix: _state
     vars:
-      name: _NAME_
+      singular: _SINGULAR_
+      plural: _PLURAL_
